2002-01-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-plugins-engine.[ch] (gedit_plugins_engine_configure_plugin):
	new function

	* dialogs/gedit-dialog-plugin-manager.c: now use
	gedit_plugins_engine_configure_plugin

2002-01-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-commands.c (gedit_cmd_help_about): added James to
	authors

2002-01-21  James Willcox <jwillcox@cs.indiana.edu>

	* dialogs/gedit-dialog-plugin-manager.c: Implemented the plugin
	manager.

	* dialogs/plugin-manager.glade2: UI for the plugin manager.


2002-01-21  Marcel K. de Carli Silva <magaljedi@bol.com.br>

	* gedit2.c (main): check if args != NULL only one time
	(options): use POPT_ARG_NONE to indicate no argument

	* gedit-prefs.c (gedit_prefs_save_color): new functio
	(gedit_prefs_load_color): ditto
	(gedit_prefs_save_settings): use gedit_prefs_save_color
	(gedit_prefs_load_settings): use gedit_prefs_load_color

2002-01-20  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-plugins-engine.c (gedit_plugins_engine_load):
	load "configure", "save_settings", "update_ui" and "destroy"
	symbols

2002-01-18  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-mdi.c: update plugins UI when needed

	* gedit-plugin.h: cleaned a bit

	* gedit-plugins-engine.[ch]: implemented the plugin engine

	* gedit2.c (main): initialize the plugin engine
	
2002-01-18  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c:  Fixed some little problems
	with auto-save

	* gedit2.c: removed plugin initialization

2002-01-17  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-document.c:  Added support for auto-save.
	(gedit_document_auto_save_timeout): New function
	(gedit_document_auto_save): ditto
	(gedit_document_save): reset auto save timer (if needed)
	(gedit_document_load): start auto save timer (if needed)
	(gedit_document_finalize): remove auto save timer

	* dialogs/gedit-preferences.glade2: made the auto save widgets
	sensitive.

2002-01-17  Paolo Maggi  <maggi@athena.polito.it>
